--- a/TextVector.Tests/TextVector.Tests.csproj
+++ b/TextVector.Tests/TextVector.Tests.csproj
@@ -9,6 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Samples\testbox.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Samples\testbox.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
