--- a/TextVector/TextVector.csproj
+++ b/TextVector/TextVector.csproj
@@ -5,4 +5,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="svg_def.xml" />
+    <None Remove="svg_style.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="svg_def.xml" />
+    <EmbeddedResource Include="svg_style.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="3.1.2" />
+  </ItemGroup>
+
 </Project>
