Minor refactorings in tests.

--- a/TextVector.Tests/TextVector.Tests.csproj
+++ b/TextVector.Tests/TextVector.Tests.csproj
@@ -13,12 +13,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Samples\testbox.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Content Include="Samples\testbox.txt" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="Expectations\**" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
+
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
